# argus-mcp

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .semgrep.yml  .trivyignore  .typos.toml  Dockerfile  Dockerfile.dhi  LICENSE  MANIFEST.in  Makefile  README.md  example_config.yaml  pyproject.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-wheels.yml  ci.yml  codeql.yml  dependency-review.yml  docker-security.yml  docker.yml  publish.yml  release.yml  semgrep.yml  trivy.yml
argus_mcp/: _error_utils.py  _task_utils.py  cli.py  constants.py  sessions.py
argus_mcp/_bin/: __init__.py
argus_mcp/api/: __init__.py  client.py  schemas.py
argus_mcp/audit/: logger.py
argus_mcp/audit/_audit_rs/: Cargo.toml  __init__.py  pyproject.toml
argus_mcp/audit/_audit_rs/src/: lib.rs
argus_mcp/bridge/: __init__.py  auth_discovery.py  backend_connection.py  capability_registry.py  client_manager.py  conflict.py  elicitation.py  filter.py  go_stdio_wrapper.py  groups.py  http_pool.py  rename.py  retry.py  session_pool.py  startup_coordinator.py  subprocess_utils.py  transport_factory.py  version_checker.py
argus_mcp/bridge/_ffi_guard_rs/: Cargo.toml
argus_mcp/bridge/_filter_rs/: Cargo.toml  __init__.py  pyproject.toml
argus_mcp/bridge/_filter_rs/src/: lib.rs
argus_mcp/bridge/auth/: __init__.py  dcr.py  discovery.py  httpx_auth.py  pkce.py  provider.py  refresh_service.py  store.py
argus_mcp/bridge/auth/_token_cache_rs/: Cargo.toml  __init__.py  pyproject.toml
argus_mcp/bridge/auth/_token_cache_rs/src/: lib.rs
argus_mcp/bridge/container/: __init__.py  go_docker_adapter.py  image_builder.py  labels.py  network.py  runtime.py  templates.py  wrapper.py
argus_mcp/bridge/health/: checker.py  circuit_breaker.py
argus_mcp/bridge/health/_circuit_breaker_rs/: Cargo.toml  __init__.py  pyproject.toml
argus_mcp/bridge/health/_circuit_breaker_rs/src/: lib.rs
argus_mcp/bridge/middleware/: __init__.py  audit.py  auth.py  chain.py  recovery.py  routing.py  telemetry.py
argus_mcp/cli/: __init__.py  _build.py  _clean.py  _common.py  _secret.py  _server.py  _stop.py  _tui.py
argus_mcp/config/: __init__.py  client_gen.py  diff.py  export.py  flags.py  import_handler.py  loader.py  migration.py  schema.py  schema_backends.py  schema_rate_limits.py  schema_registry.py  schema_security.py  schema_server.py  watcher.py
argus_mcp/config/_yaml_rs/: .gitignore  Cargo.toml  __init__.py  pyproject.toml
argus_mcp/config/_yaml_rs/src/: lib.rs
argus_mcp/display/: braille.py  console.py  installer.py  logging_config.py
argus_mcp/plugins/: __init__.py  base.py  manager.py  middleware.py  models.py  registry.py
argus_mcp/plugins/_hash_rs/: Cargo.toml  __init__.py  pyproject.toml
argus_mcp/plugins/_hash_rs/src/: lib.rs
argus_mcp/registry/: __init__.py  cache.py  catalog.py  client.py  models.py
argus_mcp/runtime/: models.py  service.py
argus_mcp/secrets/: providers.py  resolver.py  store.py
argus_mcp/server/: app.py  auth_context.py  handlers.py  lifespan.py  origin.py  payload_limits.py  rate_limit.py  security_headers.py  sse_resilience.py  state.py  transport.py  well_known.py
argus_mcp/skills/: manager.py  manifest.py
argus_mcp/telemetry/: config.py  metrics.py  tracing.py
argus_mcp/tui/: _config_ops.py  _constants.py  _dev_launch.py  _error_utils.py  api_client.py  app.py  argus.tcss  events.py  server_manager.py  settings.py
argus_mcp/workflows/: composite_tool.py  dsl.py  executor.py
charts/argus-mcp/: .helmignore  Chart.yaml  README.md  values.yaml
docs/: README.md  configuration.md  docker.md  getting-started.md  kubernetes.md  middleware.md  security-guide.md
docs/api/: README.md  endpoints.md
docs/architecture/: 00-overview.md  02-bridge.md  03-config.md  04-runtime.md  05-plugins.md  06-connection-pool.md  07-argusd.md
docs/audit/: README.md
docs/cli/: README.md  repl.md  server.md  tui.md
docs/plugins/: README.md  builtin-plugins.md  custom-plugins.md
docs/registry/: README.md
docs/security/: README.md  authorization.md  deployment-hardening.md  outgoing-auth.md  secrets.md
docs/skills/: README.md
docs/tui/: README.md  screens.md
mods/: debug_focus.py  sse_test_server.py  tui_launcher.py
scripts/: build_go.py  build_rust.py  ci_inject_go.py  verify_package.py
tests/: conftest.py  scenarios.yml  test_advanced_features.py  test_app_server.py  test_audit.py  test_audit_cmd.py  test_auth.py  test_auth_cmd.py  test_auth_discovery.py  test_auth_hardening_providers.py  test_auth_modes.py  test_auth_pkce.py  test_auth_store.py  test_backends_cmd.py  test_batch_cmd.py  test_builtin_plugins.py  test_capability_registry_new.py  test_circuit_breaker.py  test_clean.py  test_cli_unit.py  test_config_cmd_cmd.py  test_config_diff.py  test_config_hotreload.py  test_config_lifecycle.py  test_config_migration.py  test_config_schemas.py  test_config_server_cmd.py  test_config_wiring_integration.py  test_conflict.py  test_constants.py  test_container.py  test_containers_cmd.py  test_daemon_client.py  test_dcr.py  test_display_console.py  test_display_installer.py  test_display_logging.py  test_display_parallel.py  test_elicitation.py  test_errors.py  (+79 more)
tests/cassettes/: error_handling.json  protocol_handshake.json  resource_list.json  tool_schemas.json
tests/e2e/: conftest.py
tests/fixtures/: sse_test_server.py
tests/integration/: conftest.py  test_sse_stress.py
tests/security/: conftest.py  test_auth_negative.py  test_auth_race.py  test_find_tool_dispatch.py  test_info_disclosure.py  test_origin_strict.py  test_payload_limits.py  test_rate_limiting.py  test_secret_store.py  test_security_headers.py  test_token_entropy.py
tests/unit/: conftest.py  test_fuzz_config.py  test_fuzz_conflict.py  test_fuzz_optimizer.py  test_fuzz_paths.py  test_fuzz_secrets.py  test_fuzz_telemetry.py
tools/: bench_rust_vs_python.py
tools/docker-adapter/: .gitignore  go.mod  go.sum  main.go  main_test.go
tools/healthcheck/: main.go
tools/mcp-stdio-wrapper/: .gitignore  go.mod  main.go
(+105 files in other folders)
