[build-system]
requires = ["setuptools>=68.0", "setuptools-rust>=1.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-mcp"
version = "0.8.3"
description = "A central server for MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [{ name = "Daniel Diaz Santiago" }]
dependencies = [
    "mcp>=1.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
tui = [
    "textual>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["argus_mcp*"]

[tool.setuptools.package-data]
"argus_mcp._bin" = ["*"]
"argus_mcp.bridge.container.templates" = ["*.j2"]
"argus_mcp.tui" = ["*.tcss"]

# ── setuptools-rust: 7 PyO3 extension modules ───────────────────────────
# optional=true: build succeeds without Rust (Python fallbacks exist);
# pre-built wheels are used in Docker and CI wheel builds.

[[tool.setuptools-rust.ext-modules]]
target = "yaml_rs"
path = "argus_mcp/config/_yaml_rs/Cargo.toml"
binding = "PyO3"
optional = true

[[tool.setuptools-rust.ext-modules]]
target = "audit_rs"
path = "argus_mcp/audit/_audit_rs/Cargo.toml"
binding = "PyO3"
optional = true

[[tool.setuptools-rust.ext-modules]]
target = "filter_rs"
path = "argus_mcp/bridge/_filter_rs/Cargo.toml"
binding = "PyO3"
optional = true

[[tool.setuptools-rust.ext-modules]]
target = "token_cache_rs"
path = "argus_mcp/bridge/auth/_token_cache_rs/Cargo.toml"
binding = "PyO3"
optional = true

[[tool.setuptools-rust.ext-modules]]
target = "circuit_breaker_rs"
path = "argus_mcp/bridge/health/_circuit_breaker_rs/Cargo.toml"
binding = "PyO3"
optional = true

[[tool.setuptools-rust.ext-modules]]
target = "hash_rs"
path = "argus_mcp/plugins/_hash_rs/Cargo.toml"
binding = "PyO3"
optional = true

[[tool.setuptools-rust.ext-modules]]
target = "security_plugins_rs"
path = "argus_mcp/plugins/builtins_rust/Cargo.toml"
binding = "PyO3"
optional = true

# ── uv Workspace ────────────────────────────────────────────────────────

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/argusd"]

[tool.uv.sources]
argus-mcp = { workspace = true }

[project.scripts]
argus-mcp = "argus_mcp.cli:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "import-linter>=2.1",
    "maturin>=1.7.0",
    "mypy>=1.17.1",
    "ruff>=0.15.7",
    "textual-dev>=1.0.0",
    "types-pyyaml>=6.0.12.20250915",
]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.100.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.mypy_cache
  | \.ruff_cache
  | logs
  | img
  | internal
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
    "__pycache__",
    "logs",
    "img",
    "internal",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[tool.typos.default.extend-words]
mcp = "mcp"
sse = "sse"
oidc = "oidc"
pkce = "pkce"
sarif = "sarif"
numer = "numer"
asend = "asend"

[tool.typos.files]
extend-exclude = [
    "*.jsonl",
    "logs/",
    "internal/",
    ".venv*",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.10"
files = [
    "argus_mcp/",
]
exclude = "(^logs/|^img/|^internal/|^\\.venv/|^__pycache__/)"
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]

[[tool.mypy.overrides]]
module = ["argus_mcp.server.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["argus_mcp.bridge.client_manager"]
disable_error_code = ["assignment", "arg-type"]

[[tool.mypy.overrides]]
module = ["argus_mcp.bridge.capability_registry"]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["argus_mcp.tui.*"]
ignore_errors = true

# ── import-linter ────────────────────────────────────────────────────────
# Layered architecture enforcement.  Higher layers may depend on lower,
# but not the reverse.  Run: uv run lint-imports

[tool.importlinter]
root_package = "argus_mcp"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "cli : tui",                                   # L5 — entry-points (non-independent)
    "server",                                      # L4 — server
    "bridge : runtime : plugins : registry : skills : workflows",  # L3 — business
    "config : telemetry",                          # L2 — config
    "display : audit : secrets : sessions",        # L1 — core services
    "api",                                         # L0.5 — shared API layer (client-safe)
    "constants : errors : _task_utils : _error_utils",  # L0 — foundation
]
containers = ["argus_mcp"]
ignore_imports = [
    # bridge.middleware needs auth types from server.auth.providers
    "argus_mcp.bridge.middleware.auth -> argus_mcp.server.auth.providers",
    "argus_mcp.bridge.middleware.authz -> argus_mcp.server.auth.providers",
    "argus_mcp.bridge.middleware.authz -> argus_mcp.server.authz.*",
    # config.schema re-exports PluginsConfig for unified schema
    "argus_mcp.config.schema -> argus_mcp.plugins.models",
    # server.lifespan accesses cli.uvicorn_svr_inst for signal handling
    "argus_mcp.server.lifespan -> argus_mcp.cli",
]

# ── pytest ───────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
markers = [
    "integration: tests requiring live backend servers",
    "live_server: tests that require a running argus-mcp gateway (deselect in CI)",
    "semgrep: tests requiring Semgrep CLI or API authentication",
    "slow: tests that take more than 10 seconds",
    "fuzz: property-based / fuzz tests (Hypothesis)",
    "security: security-focused tests (auth, token scope, negative)",
    "e2e: end-to-end tests requiring full stack",
    "stress: stress / load tests (concurrent, rapid-fire)",
]
filterwarnings = [
    "ignore::DeprecationWarning:anyio",
    "ignore::DeprecationWarning:pkg_resources",
]
addopts = "-q --strict-markers -m 'not (integration or e2e or semgrep)'"

[tool.coverage.run]
source = ["argus_mcp"]
branch = true
omit = [
    "argus_mcp/__main__.py",
    "argus_mcp/tui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
    "raise NotImplementedError",
]
show_missing = true
skip_empty = true
fail_under = 50

# ── cibuildwheel ─────────────────────────────────────────────────────────
# Platform wheel config. abi3-py310 = one wheel per platform.

[tool.cibuildwheel]
build = "cp310-*"
skip = "cp310-{manylinux_i686,musllinux_*,win32,*-universal2}"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH", MACOSX_DEPLOYMENT_TARGET = "12.0" }

[tool.cibuildwheel.windows]
before-all = "rustup show"

# ── python-semantic-release ──────────────────────────────────────────────

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["argus_mcp/constants.py:SERVER_VERSION"]
commit_message = "release: v{version}"
tag_format = "v{version}"
major_on_zero = false
build_command = "echo 'skip build'"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = false
