[package]
name = "audit-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "audit_rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.28"
features = ["extension-module", "abi3-py311"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
