[package]
name = "yaml-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "yaml_rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.28"
features = ["extension-module", "abi3-py310"]

[dependencies]
serde_yml = "0.0.12"
serde_json = "1"
ffi_guard_rs = { path = "../../bridge/_ffi_guard_rs", package = "ffi-guard-rs" }
pyo3-log = "0.13"
log = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
