[package]
name = "hash-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "hash_rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.28"
features = ["extension-module", "abi3-py310"]

[dependencies]
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
