[package]
name = "token-cache-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "token_cache_rs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.28"
features = ["extension-module", "abi3-py310"]

[dependencies]
zeroize = "1"
ffi_guard_rs = { path = "../../_ffi_guard_rs", package = "ffi-guard-rs" }
pyo3-log = "0.13"
log = "0.4"

[profile.release]
lto = "fat"
codegen-units = 1
